Update cache tuning parameters on config reload, before restarting the caches.

--- a/t/etc/server.conf
+++ b/t/etc/server.conf
@@ -46,3 +46,13 @@ check_mirror: 45
 check_irc: 30
 check_http: 30
 
+clean_cache: 30
+
+[cachesize]
+backend: 10000
+frontend: 10000
+quoting: 10000
+views: 10000
+dnsrr: 10000
+dnsmsg: 10000
+
