--- a/t/etc/server.conf
+++ b/t/etc/server.conf
@@ -9,9 +9,14 @@ maxcache: 100000
 # in case none of the designated server settings work.
 
 [special]
-ip: ip.test-ipv6.com
-ip: what.test-ipv6.com
-which: which.test-ipv6.com
+ip: [ip.test-ipv6.com, what.test-ipv6.com]
+as: [as.test-ipv6.com, asn.test-ipv6.com]
+view: [which.test-ipv6.com, view.test-ipv6.com]
+isp: provider.test-ipv6.com
+maxmind: maxmind.test-ipv6.com
+help: help.test-ipv6.com
+break: t.dns-test.net
+
 
 [server/bender]
 udp: [::]:8053
